# rag-benchmark

./: .env.example  .gitignore  pyproject.toml  run_benchmark.py
.claude/: CLAUDE.md
adapters/: _import_utils.py  agentic_graph_rag_adapter.py  base.py  cog_rag_cognee_adapter.py  pageindex_adapter.py  rag2_adapter.py  rag_temporal_adapter.py  registry.py  temporal_kb_adapter.py
article/: generator.py
article/templates/: intro_en.md  intro_ru.md  methodology_en.md  methodology_ru.md
benchmark/: compare.py  evaluate.py  runner.py
dashboard/: i18n.py  streamlit_app.py
data/: questions.json
data/documents/: en_llm_survey.txt  ru_graph_kb.txt
docs/plans/: 2026-02-24-rag-benchmark-design.md  2026-02-24-rag-benchmark-implementation.md
scripts/: prepare_documents.py
tests/: conftest.py  test_adapter_agr.py  test_adapter_crc.py  test_adapter_pageindex.py  test_adapter_rag2.py  test_adapter_rt.py  test_adapter_tkb.py  test_article.py  test_compare.py  test_evaluate.py  test_integration.py  test_models.py  test_registry.py  test_runner.py
